# spectrum

./: .eslintrc.json  .gitignore  .prettierignore  .stylelintrc.json  Cargo.toml  LICENSE-MIT  README.md  clippy.sh  index.html  index.js  manifest.json  package-lock.json  package.json  tsconfig.json  wasm-pack.sh  webpack.config.js  webpack.prod.config.js
.github/workflows/: azure-static-web-apps-salmon-glacier-07c5fa010.yml  ci.yml  deploy.yml  dev.yml  prod.yml
src/: bootstrap.js  bootstrap.ts  index.html  index.js  index.ts  lib.rs  old-index.ts  spectrum.css  startup.ts
src/spectrum/: index.ts  js.ts  mod.rs  wasm.rs  webgl.rs
src/utils/: base.rs  fps.js  fps.ts  index.ts  math.rs  math.ts  mod.rs  panic.rs  spectrum.ts
static/: manifest.json  spectrum.css
ts/: bootstrap.js  fps.js  index.js
ts/utils/: fps.js
wasm/: Cargo.toml  LICENSE_MIT
wasm/src/: base.rs  lib.rs  utils.rs
