[package]
name = "spectrum"
version = "1.0.0"
authors = ["Arpan Laha"]
edition = "2018"
description = "Animate randomly-generated art with Rust + WebAssembly."
repository = "https://github.com/arpanlaha/spectrum"
license = "MIT"

[lib]
crate-type = ["cdylib"]


[dependencies]
wasm-bindgen = "0.2"
getrandom = { version = "0.1", features = ["wasm-bindgen"] }
js-sys = "0.3"
rand = { version = "0.7", features = ["getrandom"] }
wee_alloc = "0.4"

console_error_panic_hook = "0.1"

[dependencies.web-sys]
version = "0.3"
features = [
  'CanvasRenderingContext2d',
  'HtmlCanvasElement',
  'ImageData',
  'WebGlBuffer',
  'WebGlRenderingContext',
  'WebGlProgram',
  'WebGlShader',
  'WebGlUniformLocation',
  "console",
]

[profile.release]
opt-level = 3
lto = 'fat'
codegen-units = 1

[package.metadata.wasm-pack.profile.release]
wasm-opt = ['-O4']
