[package]
name = "spectrum"
version = "1.0.0"
authors = ["Arpan Laha"]
edition = "2018"
description = "Animate randomly-generated art with Rust + WebAssembly."
repository = "https://github.com/arpanlaha/spectrum"
license = "MIT"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
getrandom = { version = "0.2", features = ["js"] }
js-sys = "0.3"
rand = { version = "0.7", features = ["getrandom", "wasm-bindgen"] }
wee_alloc = "0.4"

[dependencies.web-sys]
version = "0.3"
features = [
  'CanvasRenderingContext2d',
  'HtmlCanvasElement',
  'ImageData',
  'WebGlBuffer',
  'WebGlRenderingContext',
  'WebGlProgram',
  'WebGlShader',
  'WebGlUniformLocation',
  "console",
]

[profile.release]
opt-level = 3
lto = 'fat'
codegen-units = 1

[package.metadata.wasm-pack.profile.release]
wasm-opt = ['-O4']
