[package]
name = "spectrum"
version = "1.0.0"
authors = ["Arpan Laha"]
edition = "2021"
description = "Animate randomly-generated art with Rust + WebAssembly."
repository = "https://github.com/arpanlaha/spectrum"
license = "MIT"

[lib]
crate-type = ["cdylib"]

[features]
default = []
debug = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2"
getrandom = { version = "0.2", features = ["js"] }
js-sys = "0.3"
rand = { version = "0.8", features = ["getrandom"] }
wee_alloc = "0.4"
console_error_panic_hook = { version = "0.1", optional = true }

[dependencies.web-sys]
version = "0.3"
features = [
  'CanvasRenderingContext2d',
  'HtmlCanvasElement',
  'ImageData',
  'WebGlBuffer',
  'WebGlRenderingContext',
  'WebGlProgram',
  'WebGlShader',
  'WebGlUniformLocation',
]

[profile.release]
opt-level = 3
lto = 'fat'
codegen-units = 1

[package.metadata.wasm-pack.profile.release]
wasm-opt = ['-O4']
